deploy/aks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parapet
  labels:
    app.kubernetes.io/part-of: parapet
